# odin

./: README.md  pyproject.toml  test_running_odin.ipynb
.scivision/: model.yml
models/: checkpoint.pt
odin/: __init__.py  dataset.py  evaluate.py  io.py  model.py
tests/: test_odin.py
