[tool.poetry]
name = "odin"
version = "0.1.0"
description = ""
authors = ["mooniean <bmbcgomes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.2"
torchvision = "^0.11.3"
vne = {git = "https://github.com/quantumjot/vne", branch = "main"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
